# cloud-cost-kb

./: .gitignore  README.md  data_exploration.ipynb  pyproject.toml
src/app/: api.py  streamlit_ui.py
src/graph/: db.py  embeddings.py  ingest.py  ingest_metadata.py  schema.py
src/rag/: generator.py  pipeline.py  retriever.py
